--- a/views/AuthController/forgot_password.html
+++ b/views/AuthController/forgot_password.html
@@ -1,36 +1,59 @@
 {{define "head"}}
-    <style>
-        #login-panel {
-            margin-top: 40px;
-        }
-    </style>
-    <title></title>
+
+<title></title>
 {{end}}
 {{define "body"}}
 
-<div class="container-fluid" id="login-panel">
+<div class="container-fluid" style="margin-top: 150px;" align="center">
     <div class="row">
-        <div class="col text-center">
-            <form action="/forgot_password" method="POST">
+        <div class="col-md-4 offset-md-4 h4 text-center">
+            {{ t .CurrentLocale "forgot_password" ""}}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <form method="post" action="/forgot_password" class="form" id="get-password-reset-code-form">
+                {{ .CSRFTemplateField}}
                 <div class="form-group">
-                    <label  for="input-username">Username</label>
-                    <input class="form-control" type="text" name="username" id="input-username" placeholder="Enter email address">
+                    <input id="email" name="email" placeholder=" {{ t .CurrentLocale "email" ""}}" type="text" class="form-control">
                 </div>
-                <button type="submit" class="btn btn-outline-secondary btn-sm">Reset Password</button>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-safestop btn-block"> {{ t .CurrentLocale "email_my_reset_link" ""}}</button>
+                </div>
+                <div class="form-group">
+                    <a href="/login" class="btn btn-safestop btn-block">{{ t .CurrentLocale "cancel" "" }}</a>
+                </div>
             </form>
-        </div>
-    </div>
-    <div class="row" style="padding-top: 20px;">
-        <div class="col text-center">
-            <a class="btn btn-outline-secondary btn-sm" href="/register">Not a member? Register</a>
-        </div>
-    </div>
-    <div class="row" style="padding-top: 20px;">
-        <div class="col text-center">
-            <a class="btn btn-outline-secondary btn-sm" href="/login">Return to login</a>
         </div>
     </div>
 </div>
 
+<script type="text/javascript">
 
-{{end}}
+    $(document).ready(function () {
+
+        $('form').bootstrapValidator({
+            framework: 'bootstrap',
+            feedbackIcons: {
+                valid: 'glyphicon glyphicon-ok',
+                invalid: 'glyphicon glyphicon-remove',
+                validating: 'glyphicon glyphicon-refresh'
+            },
+            fields: {
+                'email': {
+                    validators: {
+                        regexp: {
+                            regexp: /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
+                            message: '{{ t .CurrentLocale "invalid_email_format" "" }}'
+                        },
+                        notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'}
+                    }
+                }
+            }
+        })
+    })
+
+</script>
+
+
+{{ end }}
