--- a/views/layouts/index.html
+++ b/views/layouts/index.html
@@ -32,7 +32,7 @@
         <tr>
             <td style="width:100%; padding: 0px;" colspan="3">
                 <div class="progress" style="height:5px; margin: 0px;">
-                    <div class="progress-bar progress-bar-danger progress-bar-sm" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                    <div style="background:#D9534F; border-radius: 0px;" class="progress-bar progress-bar-danger progress-bar-sm" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                     </div>
                 </div>
             </td>
