--- a/views/layouts/index.html
+++ b/views/layouts/index.html
@@ -63,7 +63,7 @@
 <div class="nav-bar-bottom">
 
     <div id="ad" style="background-color: whitesmoke; text-align: center; display: none;">
-        <a id="ad-link" href="#" style="border: 0px;"><img id="ad-image" src=""></a>
+        <a id="ad-link" href="#" target="_blank" style="border: 0px;"><img id="ad-image" src=""></a>
     </div>
 
     <div>
