--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -19,6 +19,12 @@
     color: #e94d2f;
 }
 
+.not-available {
+    color: #9D9D9D;
+    font-weight: 300;
+    font-style: italic;
+}
+
 
 
 
@@ -320,4 +326,20 @@
     font-size: 10pt;
     font-weight: 300;
     text-align: center;
+}
+
+.progress-bar {
+    -webkit-transition-duration: 350ms;
+    -moz-transition-duration: 350ms;
+    -ms-transition-duration: 350ms;
+    -o-transition-duration: 350ms;
+    transition-duration: 350ms;
+}
+
+.notransition {
+    -webkit-transition-duration: 1ms;
+    -moz-transition-duration: 1ms;
+    -ms-transition-duration: 1ms;
+    -o-transition-duration: 1ms;
+    transition-duration: 1ms;
 }
