--- a/views/AppController/index.html
+++ b/views/AppController/index.html
@@ -126,7 +126,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="width: 40%;">
+                        <td style="width: 40%; vertical-align: top;">
                             {|^sh|}
                                 <div class="scheduled_time">
                                     <div class="se-title">{{ t .CurrentLocale "scheduled" "" }}</div>
@@ -134,17 +134,17 @@
                                 </div>
                             {|/sh|}
                         </td>
-                        <td style="width: 40%;" class="text-left">
+                        <td style="width: 40%; vertical-align: top;" class="text-left">
                             {|^sh|}
-                                {|^a|}
-                                    {|^hp|}
+                                {{/*{|^a|}*/}}
+                                    {{/*{|^hp|}*/}}
                                         <div class="expected_time">
                                             <div class="se-title">{|tt|}</div>
                                             <div class="ms-time {|tc|}">{|t|}</div>
                                             <div class="as_of">{|ao|}</div>
                                         </div>
-                                    {|/hp|}
-                                {|/a|}
+                                    {{/*{|/hp|}*/}}
+                                {{/*{|/a|}*/}}
                             {|/sh|}
                         </td>
                     </tr>
@@ -196,6 +196,8 @@ var ms_template = $("#ms-template").html();
 
 $(document).ready(function () {
 
+    start_progress_bar();
+
     if(isNativeiOSApp()) {
         sendMessageToNative({command:'register_for_notifications', callback: 'did_register_for_notifications_callback', data:''});
     }
@@ -204,9 +206,6 @@ $(document).ready(function () {
     {
         gcm_callback(gcm_token);
     }
-
-
-    start_progress_bar();
 
     $(".message-bubble").click(function (e) {
         set_viewed_alerts();
@@ -224,12 +223,12 @@ function refresh_stops() {
 
     $('#loading_spinner').show();
 
+
+    start_time = Date.now();
     $.get('/api/my_stops', {
         "gorilla.csrf.Token": $("input[name='gorilla.csrf.Token']").val(),
         format: 'json'
     }, function (response) {
-
-        console.log(JSON.stringify(response));
 
         $("#my-stops").empty();
         $('#loading_spinner').hide();
