--- a/views/layouts/alert_jurisdictions.html
+++ b/views/layouts/alert_jurisdictions.html
@@ -16,7 +16,7 @@
     <table>
         <tr>
             <td>
-                <a href="/alert_jurisdictions"><i class="fa fa-chevron-left back" aria-hidden="true"></i></a>
+                <a href="/alerts_dashboard"><i class="fa fa-chevron-left back" aria-hidden="true"></i></a>
             </td>
             <td align="center">
                 <i style="font-size: 10pt; " class="fa fa-user" aria-hidden="true"></i>
@@ -26,7 +26,6 @@
                 <a href="/account"><i class="fa fa-times" aria-hidden="true"></i></a>
             </td>
         </tr>
-
         <tr>
             <td style="width:100%; border-bottom: 1px solid #ccc;" colspan="3">
                 <div style="background: #FFFFFF; padding: 10px; z-index:3; overflow-y: scroll !important; max-height: 500px; !important;" id="message-td" class="collapse">
@@ -34,8 +33,6 @@
                 </div>
             </td>
         </tr>
-
-
     </table>
 </div>
 
